# brew-scout

./: .gitignore  pyproject.toml
src/brew_scout/: __init__.py  __main__.py  app.py  cask_cache.py  matcher.py  models.py  onboarder.py  scanner.py
src/brew_scout/screens/: onboard.py  results.py  scan.py
